<resources>
    <string name="app_name">CoroCare</string>
    <string name="description">profile image</string>
    <string name="status">Status:</string>
    <string name="menuDescription">menu image</string>
    <string name="self_test">Self Check</string>
    <string name="report_a_case">Report a case</string>
    <string name="virus_symptoms">Symptoms</string>
    <string name="precautions">Precautions</string>
    <string name="news_update">News Update</string>
    <string name="movement_history">Movement History</string>
    <string name="instructions">Instructions</string>

    <string name="text_sample">
       "NOTE: \nIf you are sick and not sure if you need to take a COVID'19 test, this is a tool to help.\n The result from this check is not a substitute for professional medical advice, diagnosis or treatment.
        If you think you have/may have a medical emergency, immediately call your doctor or the National Centre for Disease Control (NCDC) emergency line of your state.

</string>
    <string name="start_test">Start Check</string>
    <string name="title_activity_location_history">Map</string>
    <string name="location_history">Location History</string>
    <string name="welcome_to_coro">Welcome to Coro</string>
    <string name="care">Care</string>
    <string name="enter_your_fullname">Enter Your Fullname</string>
    <string name="enter_your_phone_number">Enter Your Phone Number</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="text_continue">Continue</string>
    <string name="not_home">No maybe later</string>
    <string name="are_you_at_home">Use your current location as your home location?</string>
    <string name="upload_a_profile_picture">Upload a profile picture</string>
    <string name="coro">Coro</string>
    <string name="news">News</string>
    <string name="symptoms">Symptoms</string>


    <string name="precaution_1">
        "Regularly and thoroughly clean your hands with an alcohol-based hand rub or wash them with soap and water.
        Why? Washing your hands with soap and water or using alcohol-based hand rub kills viruses that may be on your hands.
    </string>

    <string name="precaution_2">
        "Maintain at least 1 meter (3 feet) distance between yourself and anyone who is coughing or sneezing.
        Why? When someone coughs or sneezes they spray small liquid droplets from their nose or mouth which may contain the virus. If you are too close, you can breathe in the droplets, including the COVID-19 virus if the person coughing has the disease.
    </string>

    <string name="precaution_3">
         "Avoid touching eyes, nose and mouth.
        Why? Hands touch many surfaces and can pick up viruses. Once contaminated, hands can transfer the virus to your eyes, nose or mouth. From there, the virus can enter your body and can make you sick.

    </string>

    <string name="precaution_4">
        "Make sure you, and the people around you, follow good respiratory hygiene. This means covering your mouth and nose with your bent elbow or tissue when you cough or sneeze. Then dispose of the used tissue immediately.
        Why? Droplets spread the virus. By following good respiratory hygiene you protect the people around you from viruses such as cold, flu and COVID-19.

    </string>

    <string name="precaution_5">
         "Stay home if you feel unwell. If you have a fever, cough and difficulty breathing, seek medical attention and call in advance. Follow the directions of your local health authority.
        Why? National and local authorities will have the most up to date information on the situation in your area. Calling in advance will allow your health care provider to quickly direct you to the right health facility. This will also protect you and help prevent the spread of viruses and other infections.

    </string>

    <string name="precaution_6">
        "Keep up to date on the latest COVID-19 hotspots (cities or local areas where COVID-19 is spreading widely). If possible, avoid traveling to places  – especially if you are an older person or have diabetes, heart or lung disease.
        Why? You have a higher chance of catching COVID-19 in one of these areas.

    </string>
    <string name="report_string">Please select your state and a number below to reach NCDC emergency centre in your State</string>
    <string name="test_count">Check: 1/x</string>
    <string name="rd_text_yes">Yes</string>
    <string name="rd_text_no">No</string>
    <string name="text_result_negative">
        "You do not need to take a COVID-19 test.

        Please contact your doctor for medical attention if you are experiencing any of the previously listed symptoms.
        Remember to wash your hands regularly and maintain social distancing.
    </string>

    <string name="text_result_positive">
        "You have possible symptoms of COVID-19 or may have been exposed.

        Please press the button below to contact the National Center for Disease Control (NCDC) emergency centre in your State to be tested.
        Please observe the standard guideline for self-isolation for the safety of people around you.

    </string>
    <string name="text_result">RESULT</string>
    <string name="btn_text_finish">FINISH</string>
    <string name="btn_text_report">REPORT</string>
    <string name="how_old_are_you">How old are you?</string>
    <string name="menu_about">About</string>

    <string name="sym1">
        "COVID-19 affects different people in different ways. Most infected people will develop mild to moderate illness and recover without hospitalization.</string>

    <string name="symp_H">
        "Most common symptoms:
    </string>

    <string name="sym2">
         " * fever \n * dry cough \n * tiredness
    </string>

    <string name="symp_H2">
        Less common symptoms:
    </string>

    <string name="sym3">
        " * aches and pains \n * sore throat \n * diarrhoea \n * conjunctivitis \n * headache \n * loss of taste or smell \n * a rash on skin, or discolouration of fingers or toes
    </string>

    <string name="symp_H3">
        Serious symptoms:
    </string>

    <string name="sym4">
        " * difficulty breathing or shortness of breath \n * chest pain or pressure \n * loss of speech or movement
    </string>

    <string name="symp_H4">
        "Seek immediate medical attention if you have serious symptoms. Always call before visiting your doctor or health facility.

People with mild symptoms who are otherwise healthy should manage their symptoms at home.

On average it takes 5–6 days from when someone is infected with the virus for symptoms to show, however it can take up to 14 days.
    </string>
    <string name="contact_us">"This app was developed by Storm Technologies.   \n\n Contact us: stormtechnologies0@gmail.com, 07067455268 </string>

</resources>
