<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Precaution">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="185dp"
        android:background="@color/viewColor" />

    <ImageView
        android:id="@+id/imageBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_back"
        android:contentDescription="@string/app_name"
        android:onClick="imageBack"
        android:padding="10dp"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textViewSF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/precautions"
        android:textAllCaps="true"
        android:textAppearance="@style/pageTitle_text"
        android:layout_centerHorizontal="true" />


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/cornered_layout"
        android:layout_below="@id/textViewSF">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:padding="5dp"
                android:text="@string/precaution_1"
                android:textAlignment="center"
                android:textAppearance="@style/body_text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:padding="5dp"
                android:text="@string/precaution_2"
                android:textAlignment="center"
                android:textAppearance="@style/body_text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:padding="5dp"
                android:text="@string/precaution_3"
                android:textAlignment="center"
                android:textAppearance="@style/body_text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:padding="5dp"
                android:text="@string/precaution_4"
                android:textAlignment="center"
                android:textAppearance="@style/body_text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:padding="5dp"
                android:text="@string/precaution_5"
                android:textAlignment="center"
                android:textAppearance="@style/body_text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="30dp"
                android:padding="5dp"
                android:text="@string/precaution_6"
                android:textAlignment="center"
                android:textAppearance="@style/body_text" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>