<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Symptoms">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="285dp"
        android:background="@color/viewColor" />

    <ImageView
        android:id="@+id/imageBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/app_name"
        android:onClick="goBack"
        android:padding="10dp"
        android:src="@drawable/ic_back"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textViewSF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/symptoms"
        android:textAllCaps="true"
        android:textAppearance="@style/pageTitle_text"
        android:layout_centerHorizontal="true" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/cornered_layout"
        android:layout_below="@id/textViewSF">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:padding="5dp"
                android:text="@string/sym1"
                android:textAlignment="center"
                android:textAppearance="@style/body_text" />

            <ImageView
                android:id="@+id/img111"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:padding="5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/symp_H"
                android:textAppearance="@style/body_text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:paddingStart="10dp"
                android:paddingEnd="5dp"
                android:text="@string/sym2"
                android:textAppearance="@style/body_text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:paddingStart="5dp"
                android:paddingTop="5dp"
                android:paddingEnd="5dp"
                android:text="@string/symp_H2"
                android:textAppearance="@style/body_text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:paddingStart="10dp"
                android:paddingEnd="5dp"
                android:text="@string/sym3"
                android:textAppearance="@style/body_text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:paddingStart="5dp"
                android:paddingTop="5dp"
                android:paddingEnd="5dp"
                android:text="@string/symp_H3"
                android:textAppearance="@style/body_text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:paddingStart="10dp"
                android:paddingEnd="5dp"
                android:text="@string/sym4"
                android:textAppearance="@style/body_text" />

            <ImageView
                android:id="@+id/img112"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:padding="5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:padding="5dp"
                android:text="@string/symp_H4"
                android:textAlignment="center"
                android:textAppearance="@style/body_text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Source: World Health Organisation"
                android:textAlignment="center"
                android:padding="5dp"
                android:layout_marginBottom="3dp"
                android:textColor="@color/TextColor" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</RelativeLayout>