<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFillLight"
    tools:context=".SelfTest">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="185dp"
            android:background="@color/viewColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/app_name"
            android:onClick="back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_back" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/self_test"
            android:textAllCaps="true"
            android:textAppearance="@style/pageTitle_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageBack" />


        <RelativeLayout
            android:id="@+id/rv_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="17dp"
            android:background="@drawable/cornered_layout"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView">


            <TextView
                android:id="@+id/test_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:padding="5dp"
                android:text="@string/test_count"
                android:textAppearance="@style/body_text"
                android:textSize="15sp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/text_check"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/test_count"
                android:layout_marginStart="10dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="10dp"
                android:padding="5dp"
                android:text="@string/text_sample"
                android:textAlignment="center"
                android:textAppearance="@style/menu_text_main"
                android:visibility="invisible" />

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_check"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20sp"
                android:orientation="horizontal"
                android:padding="5dp"
                android:visibility="invisible">

                <RadioButton
                    android:id="@+id/radioButtonYes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rd_text_yes"
                    android:textAppearance="@style/menu_text_main" />

                <RadioButton
                    android:id="@+id/radioButtonNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:text="@string/rd_text_no"
                    android:textAppearance="@style/menu_text_main" />

            </RadioGroup>

            <Button
                android:id="@+id/btn_NextFinish"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/radio_group"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/btn_dark_bg"
                android:text="Next"
                android:textAllCaps="true"
                android:textAppearance="@style/btn_text"
                android:textColor="@color/colorFillLight"
                android:textStyle="bold"
                android:visibility="invisible" />


            <LinearLayout
                android:id="@+id/linear_starter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">


                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="26dp"
                    android:layout_gravity="center"
                    android:text="@string/instructions"
                    android:textAppearance="@style/menu_text_main" />

                <TextView
                    android:id="@+id/textDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="10dp"
                    android:padding="10dp"
                    android:text="@string/text_sample"
                    android:textAlignment="center"
                    android:textAppearance="@style/body_text" />

                <Button
                    android:id="@+id/start_check"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="80dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/btn_dark_bg"
                    android:text="@string/start_test"
                    android:textAllCaps="true"
                    android:textAppearance="@style/btn_text"
                    android:textColor="@color/colorFillLight"
                    android:textStyle="bold" />

            </LinearLayout>


        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>